# tiffconcept

./: LICENSE  README.md
benchmarks/: CMakeLists.txt  README.md  benchmark.cpp  benchmark_helpers.cpp  benchmark_helpers.hpp  benchmark_read_directory.cpp
tests/: CMakeLists.txt  test_compressor_decompressor.cpp  test_encoder.cpp  test_error_handling.cpp  test_extracted_tags.cpp  test_ifd_builder.cpp  test_image_reader.cpp  test_image_writer.cpp  test_multipage_ifd.cpp  test_predictor.cpp  test_reader_writer.cpp  test_tag_parsing_writing.cpp  test_tiff_file.cpp  test_tiff_writer.cpp  test_write_strategies.cpp
tiffconcept/include/tiff/: chunk_info.hpp  compressor_base.hpp  compressor_standard.hpp  compressor_zstd.hpp  decode_strategy.hpp  decoder.hpp  decompressor_base.hpp  decompressor_standard.hpp  decompressor_zstd.hpp  encoder.hpp  ifd.hpp  ifd_builder.hpp  image_reader.hpp  image_reader_examples.hpp  image_reader_variants.hpp  image_shape.hpp  image_writer.hpp  metadata.hpp  parsing.hpp  predictor.hpp  read_strategy.hpp  reader_base.hpp  reader_buffer.hpp  reader_stream.hpp  reader_unix_mmap.hpp  reader_unix_pread.hpp  reader_windows.hpp  reader_windows_mmap.hpp  readers.hpp  result.hpp  strips.hpp  tag_extraction.hpp  tag_reader.hpp  tag_spec.hpp  tag_writing.hpp  tiff.hpp  tiff_writer.hpp  tiling.hpp  types.hpp  write_strategy.hpp
tiffconcept/include/tiffconcept/: compressor_base.hpp  decoder.hpp  decompressor_base.hpp  encoder.hpp  ifd.hpp  ifd_builder.hpp  image_reader.hpp  image_reader_variants.hpp  image_shape.hpp  image_writer.hpp  parsing.hpp  predictor.hpp  reader_base.hpp  result.hpp  tag_extraction.hpp  tag_spec.hpp  tag_writing.hpp  tiff_writer.hpp  tiffconcept.hpp  tiling.hpp  types.hpp
tiffconcept/include/tiffconcept/compressors/: compressor_base.hpp  compressor_standard.hpp  compressor_zstd.hpp
tiffconcept/include/tiffconcept/decompressors/: decompressor_base.hpp  decompressor_standard.hpp  decompressor_zstd.hpp
tiffconcept/include/tiffconcept/impl/: decoder_impl.hpp  encoder_impl.hpp  ifd_builder_impl.hpp  ifd_impl.hpp  image_reader_impl.hpp  image_shape_impl.hpp  image_writer_impl.hpp  parsing_impl.hpp  predictor_impl.hpp  tag_extraction_impl.hpp  tag_writing_impl.hpp  tiff_writer_impl.hpp  tiling_impl.hpp  types_impl.hpp
tiffconcept/include/tiffconcept/lowlevel/: decoder.hpp  encoder.hpp  ifd_builder.hpp  predictor.hpp  tag_writing.hpp  tiling.hpp
tiffconcept/include/tiffconcept/lowlevel/impl/: decoder_impl.hpp  encoder_impl.hpp  ifd_builder_impl.hpp  predictor_impl.hpp  tag_writing_impl.hpp  tiling_impl.hpp
tiffconcept/include/tiffconcept/readers/: reader_buffer.hpp  reader_stream.hpp  reader_unix_io_uring.hpp  reader_unix_mmap.hpp  reader_unix_pread.hpp  reader_windows.hpp  reader_windows_async.hpp  reader_windows_mmap.hpp  readers.hpp
tiffconcept/include/tiffconcept/strategy/: chunk_strategy.hpp  decode_strategy.hpp  read_strategy.hpp  write_strategy.hpp
tiffconcept/include/tiffconcept/types/: optional.hpp  result.hpp  tag_codes.hpp  tag_spec.hpp  tag_spec_examples.hpp  tiff_spec.hpp  tile_info.hpp
tiffconcept/include/tiffconcept/types/impl/: tiff_spec_impl.hpp
tiffconcept/src/: zstd.c
